--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "play with state",
   "main": "basic.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*"
   },
   "author": "mialso",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tape": "4.8.0"
+  }
 }
